--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 #google_scholar: https://scholar.google.com/citations?user=bePCCD8AAAAJ&hl=en
-# cv_link: assets/files/HanchaoZhangCV.pdf
+cv_link: assets/files/向泉州-复旦大学大数据学院.pdf
 github_link: https://github.com/AltonXiang
 #linkedin: https://www.linkedin.com/in/hanchao-ted-zhang-670105b7/?locale=en_US
 #twitter: https://twitter.com/tedddddy_zhang
